refactor(chat, message): change param from nextToken to currentPage, change response data in chats and messages
