# docs/swagger.json
@@ -297,9 +297,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "Token for pagination",
-                        "name": "nextToken",
+                        "type": "integer",
+                        "description": "Current page number (default: 1)",
+                        "name": "currentPage",
                         "in": "query"
                     },
                     {
@@ -311,7 +311,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of chats",
+                        "description": "List of chats with pagination info",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -371,15 +371,15 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "Token for pagination",
-                        "name": "nextToken",
+                        "type": "integer",
+                        "description": "Current page number (default: 1)",
+                        "name": "currentPage",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of messages",
+                        "description": "List of messages with pagination info",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
