# internal/entity/interfaces/chat_repository.go
@@ -3,6 +3,6 @@ package interfaces
 import "gin-real-time-talk/internal/entity"
 
 type ChatRepository interface {
-	GetByUserID(userID uint, limit int, nextToken string, search string) ([]entity.Chat, string, error)
+	GetByUserID(userID uint, limit int, page int, search string) ([]entity.Chat, int64, error)
 	GetByID(id uint) (*entity.Chat, error)
 }
